<resources>
    <string name="app_name">100_MySQL_con_Android_Studio</string>
    <string name="txt_codigo">Ingrese el código</string>
    <string name="btn_buscar">Buscar</string>
    <string name="txt_producto">Ingrese el producto</string>
    <string name="txt_precio">Ingrese el precio</string>
    <string name="txt_fabricante">Ingrese el fabricante</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_modificar">Modificar</string>
    <string name="btn_eliminar">Eliminar</string>
</resources>
